# candidate_selection

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  dockerfile  leads_scores.csv  pyproject.toml
src/candidate_selection/: job_description.py  leads.csv  main.py
src/candidate_selection/crews/candidate_scoring/: crew.py
src/candidate_selection/crews/emails_to_candidates/: crew.py
src/candidate_selection/crews/emails_to_candidates/config/: agent.yaml
src/candidate_selection/utils/: candidateUtils.py
src/candidate_selection_process/: leads.csv  main.py  models.py
src/candidate_selection_process/crews/candidate_scoring/: crew.py
src/candidate_selection_process/crews/candidate_scoring/config/: agent.yaml  task.yaml
src/candidate_selection_process/crews/emails_to_candidates/config/: task.yaml
src/candidate_selection_process/utils/: candidateUtils.py
src/email_responses/: John Doe.txt  Kate Adams.txt  Linda Smith.txt  Sarah Lee.txt  Tom Brown.txt
